fix: improve signup and login screen layout on smaller screens
Ticket: None
Changelog: None

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -990,6 +990,46 @@ div:focus {
   margin-bottom: 15px;
 }
 
+#signup-box {
+  min-height: 870px;
+  @media (max-width: 1064px) {
+    height: min-content;
+  }
+}
+
+#signup-box>div {
+  .right {
+    grid-template-columns: auto;
+    padding: 60px;
+
+    >div {
+      max-width: 500px;
+    }
+  }
+  @media (max-width: 1064px) {
+    padding: 80px 0 0;
+    grid-template-columns: 1fr;
+
+    &.full-height {
+      height: auto;
+    }
+    .right>div {
+      max-width: 420px;
+      text-align: center;
+    }
+
+  }
+}
+
+
+.svg-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  vertical-align: middle; 
+  overflow: hidden;
+}
+
 // Settings
 .org-settings-item {
   display: grid;
